--- a/css/globals.scss
+++ b/css/globals.scss
@@ -1,7 +1,7 @@
 :root {
-	--color-main: #2c05ef;
-	--color-main-alt: #056aef;
-	--color-rain: #056aef;
-	--color-text: #05efe2;
-	--color-hover: #05efe2;
+	--color-main: #841156;
+	--color-main-alt: #fc054e;
+	--color-rain: #841156;
+	--color-text: #030754;
+	--color-hover: #030754;
 }
