actually this is kinda badass

--- a/css/globals.scss
+++ b/css/globals.scss
@@ -1,7 +1,7 @@
 :root {
-	--color-main: #841156;
+	--color-main: #d70568;
 	--color-main-alt: #fc054e;
-	--color-rain: #841156;
-	--color-text: #030754;
-	--color-hover: #030754;
+	--color-rain: #fc054e;
+	--color-text: #13142a;
+	--color-hover: #13142a
 }
