--- a/css/app.css
+++ b/css/app.css
@@ -1,160 +1,5 @@
 @charset 'utf-8';
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700,900');
 @import 'globals.css';
-@import url('https://fonts.googleapis.com/css?family=Heebo:300,700');
-
-* {
-	margin: 0;
-	padding: 0;
-	border: none;
-	text-decoration: none;
-	color: inherit;
-	font-size: inherit;
-	font-weight: inherit;
-	font-family: 'Heebo', sans-serif;
-	-webkit-font-smoothing: antialiased;
-}
-
-canvas {
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: 9;
-}
-
-h1 {
-	display: inline;
-}
-
-.🌈 {
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: 8;
-	transition: opacity 2.5s;
-	opacity: 0;
-}
-
-.🌈.🌈--body {
-	background: #fff;
-	background: var(--color-main);
-	opacity: 1;
-	z-index: 7;
-	background-image: linear-gradient(
-		to bottom,
-		var(--color-main),
-		var(--color-main-alt)
-	);
-}
-body {
-	background: #000;
-}
-
-.🌈.🌈--hover {
-	background-image: linear-gradient(to bottom, #ddd, #eee);
-}
-body[data-hovered] {
-	--color-text: #fff;
-}
-body[data-hovered] .🌈.🌈--hover {
-	opacity: 1;
-}
-
-.🙅🌈 {
-	position: relative;
-	z-index: 10;
-	overflow: hidden;
-	margin: 1em;
-}
-
-.🎒 {
-	max-width: 40em;
-	margin: 5em auto;
-	margin: 20vh auto;
-	padding: 0 2.5em;
-	color: #fff;
-	color: var(--color-text);
-	transition: color 0.5s linear;
-}
-
-@media (max-width: 40em) {
-	.🎒 {
-		font-size: 0.5em;
-	}
-}
-
-.🎒-👄 {
-	margin-top: 5rem;
-	& a {
-		font-weight: 600;
-		&:hover {
-			color: var(--color-hover);
-		}
-	}
-}
-
-.🎒-🌸 {
-	margin-bottom: 5rem;
-	font-size: 2em;
-	font-weight: 200;
-}
-
-.🎒-🌎 {
-	& .🌎 {
-		display: block;
-		font-size: 6em;
-		font-weight: 800;
-	}
-
-	& .🌎:not(:last-of-type):after {
-		content: '\0020';
-		background: #fff;
-		background: var(--color-text);
-		transition: background 0.5s linear;
-		height: 1px;
-		width: 0.4em;
-		display: block;
-	}
-}
-
-.🌎 .🌎-⏹ {
-	display: inline-block;
-}
-
-.🌎:hover .🌎-⏹ {
-	animation: 0.6s jump infinite linear;
-}
-
-.🌎:hover .🌎-⏹:nth-child(5n + 1) {
-	color: #ff7575;
-}
-.🌎:hover .🌎-⏹:nth-child(5n + 2) {
-	color: #ff9563;
-}
-.🌎:hover .🌎-⏹:nth-child(5n + 3) {
-	color: #deff65;
-}
-.🌎:hover .🌎-⏹:nth-child(5n + 4) {
-	color: #a7ff7b;
-}
-.🌎:hover .🌎-⏹:nth-child(5n + 5) {
-	color: #5ad3ff;
-}
-
-@keyframes jump {
-	0% {
-		transform: translateY(0);
-	}
-	20% {
-		transform: translateY(-0.05em);
-	}
-	80% {
-		transform: translateY(0.05em);
-	}
-	100% {
-		transform: translateY(0);
-	}
-}
+@import 'base.css';
+@import 'slide.css';
