--- a/css/slide.css
+++ b/css/slide.css
@@ -1,10 +1,13 @@
 .slide {
-  padding: calc(var(--spacing-base) * 4) calc(var(--spacing-base) + calc(var(--nav-size)*1.25)) calc(var(--spacing-base) * 12) ;
+  padding: 
+  calc(var(--spacing-base) * 4) 
+  calc(var(--spacing-base) + calc(var(--nav-size)*1.25)) 
+  calc(var(--spacing-base) * 24)
 }
 
 .slide__wrap {
-  margin: auto;
   display: grid;
+  max-width: 60em;
   grid-column-gap: 4em;
   grid-row-gap: 8em;
   grid-template: 
@@ -16,7 +19,7 @@
 .slide {
   --background: #eee;
   --title: #000;
-  --body: #555;
+  --body: #444;
   background: var(--background);
 }
 
@@ -56,7 +59,20 @@
   color: var(--body);
   position: relative;
   line-height: 1.4;
-  margin-top: -2em;
+  margin-top: -1em;
+}
+
+.slide__text em {
+  opacity: .75;
+  font-style: normal;
+}
+
+.slide__text code,
+.slide__text strong {
+  background: rgba(0,0,0,.1);
+  padding: .1em .2em;
+  border-radius: .1em;
+  font-weight: inherit;
 }
 
 .slide__text p {
@@ -65,6 +81,10 @@
 
 .slide__text__nav {
   margin-top: 2em;
+}
+
+.slide__text__nav svg * {
+  fill: currentColor;
 }
 
 .slide__text__nav a {
@@ -80,13 +100,21 @@
 
 .slide__pics {
   grid-area: c;
+  margin-right: -1em;
+}
+
+.slide__pics ul {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-row-gap: 1em;
+  grid-column-gap: 1em;
 }
 
 .slide__pics img {
   width: 100%;
   display: block;
   border-radius: .2em;
-  box-shadow: 0 4px 10px 0 rgba(0,0,0,.1);
+  box-shadow: 0 4px 10px 0 rgba(0,0,0,.05);
 }
 
 .slide.slide--fantas {
