--- a/src/css/css.css
+++ b/src/css/css.css
@@ -79,10 +79,19 @@ footer strong {
   font-weight: 700;
 }
 
-footer small {
+footer footer {
   font-size: 1rem;
   margin-top: 10vmin;
   display: block;
+}
+
+footer li {
+  display: inline-block;
+}
+
+footer li:not(:last-child):after {
+  content: "·";
+  padding: 0 0.25em;
 }
 
 footer a {
