--- a/src/css/css.css
+++ b/src/css/css.css
@@ -217,7 +217,7 @@ x-glitch {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url(https://www.lauragonzalez.cc/old/4/res/gli.gif);
+  background: url(gli.gif);
   background-size: cover;
   z-index: 9;
   opacity: 0.25;
