--- a/src/css/css.css
+++ b/src/css/css.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Rubik:400,500,700&display=swap");
-
 :root {
   --darker: #001144;
   --dark: #2e3947;
@@ -30,7 +28,9 @@
 }
 
 body {
-  font-family: "Rubik", helvetica, arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   line-height: 1.1;
   letter-spacing: -0.05em;
   overflow-x: hidden;
