--- a/src/components/links/links.module.css
+++ b/src/components/links/links.module.css
@@ -39,7 +39,7 @@
 .link span {
   text-transform: uppercase;
   font-size: 1em;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.05em;
   font-weight: 400;
   opacity: 0.5;
 }
