--- a/src/css/css.css
+++ b/src/css/css.css
@@ -1,96 +1,103 @@
 :root {
-  --darker: #001144;
-  --dark: #2e3947;
-  --light: #fff;
-  --lighter: rgba(255, 255, 255, 0.5);
-  --pink: #ff0051;
+	--darker: #fff;
+	--dark: #2e3947;
+	--light: #ff0051;
+	--lighter: rgba(255, 255, 255, 0.5);
+	--pink: #ff0051;
 }
 
 :root {
-  -webkit-font-smoothing: antialiased;
+	-webkit-font-smoothing: antialiased;
 }
 
 @media (max-width: 60em) {
-  :root {
-    font-size: 0.8em;
-  }
+	:root {
+		font-size: 0.8em;
+	}
 }
 
 * {
-  font-size: 1em;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  font-weight: normal;
-  color: inherit;
-  text-decoration: none;
-  backface-visibility: hidden;
+	font-size: 1em;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	font-weight: normal;
+	color: inherit;
+	text-decoration: none;
+	backface-visibility: hidden;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  line-height: 1.1;
-  letter-spacing: -0.05em;
-  overflow-x: hidden;
-  will-change: scroll-position;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+		'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+		'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+	line-height: 1.1;
+	letter-spacing: -0.05em;
+	overflow-x: hidden;
+	will-change: scroll-position;
 }
 
 .wrapper {
-  margin: auto;
-  max-width: 42em;
-  padding: 10vmin 2em;
-  will-change: transform;
-  z-index: 20;
-  position: relative;
+	margin: auto;
+	max-width: 40em;
+	padding: 10vmin 2em;
+	will-change: transform;
+	z-index: 20;
+	position: relative;
 }
-:root[data-is-phone="true"] .wrapper {
-  padding-top: 25vh;
+:root[data-is-phone='true'] .wrapper {
+	padding-top: 25vh;
 }
 
 .chip {
-  background: var(--pink);
-  color: var(--bg-dark);
-  padding: 0.5em 0.75em;
-  font-weight: 400;
-  display: inline-flex;
-  text-transform: uppercase;
-  font-size: 1em;
-  border-radius: 2px;
-  letter-spacing: 0.1em;
+	background: var(--pink);
+	color: var(--bg-dark);
+	padding: 0.5em 0.75em;
+	font-weight: 400;
+	display: inline-flex;
+	text-transform: uppercase;
+	font-size: 0.75rem;
+	border-radius: 2px;
+	letter-spacing: 0.1em;
 }
 
 .intro {
-  font-size: 2em;
-  margin: 5vmin 0;
+	font-size: 2em;
+	margin: 5vmin 0;
 }
 
 @media (min-width: 60em) {
-  .intro {
-    font-size: 3em;
-  }
+	.intro {
+		font-size: 2.5em;
+	}
 }
 
 .intro strong,
 .intro em {
-  color: var(--pink);
-  cursor: help;
+	cursor: help;
 }
 
 .intro strong {
-  font-weight: 500;
+	font-weight: 900;
 }
 
 .intro em {
-  font-style: normal;
+	font-style: normal;
+}
+
+.intro .subintro {
+	color: #999;
+}
+
+.intro h1 {
+	margin-bottom: 1em;
 }
 
 .intro s {
-  opacity: 0.5;
-  white-space: nowrap;
-  text-decoration: line-through;
-  text-decoration-style: wavy;
-  color: var(--pink);
-  cursor: help;
+	white-space: nowrap;
+	text-decoration: line-through;
+	text-decoration-style: wavy;
+	text-decoration-color: rgba(0, 0, 0, 0.5);
+	opacity: 0.5;
+	cursor: help;
 }
