--- a/src/layout/layout.module.css
+++ b/src/layout/layout.module.css
@@ -1,29 +1,28 @@
 .block {
-  --bg: var(--light);
-  --bg-dark: var(--light);
-  --fg: var(--dark);
-  --fg-light: var(--darker);
+	--bg: var(--light);
+	--bg-dark: var(--light);
+	--fg: var(--dark);
+	--fg-light: var(--darker);
 }
-.block[data-inverted="true"] {
-  --bg: var(--dark);
-  --bg-dark: var(--darker);
-  --fg: var(--light);
-  --fg-light: var(--lighter);
+.block[data-inverted='true'] {
+	--bg: var(--dark);
+	--bg-dark: var(--darker);
+	--fg: var(--light);
+	--fg-light: var(--lighter);
 }
 
 .block {
-  background-color: var(--bg-dark);
-  background: linear-gradient(to bottom right, var(--bg-dark), var(--bg));
-  color: var(--fg);
-  contain: content;
-  overflow: hidden;
-  position: relative;
+	background-color: #fff;
+	color: var(--fg);
+	contain: content;
+	overflow: hidden;
+	position: relative;
 }
 
 .block + .block {
-  mask-image: linear-gradient(#fff, #fff), url(./squiggle.svg);
-  mask-repeat: no-repeat, repeat no-repeat;
-  mask-size: 100% 100%, auto 1.5em;
-  mask-position: 0, -1px -1px;
-  mask-composite: substract;
+	mask-image: linear-gradient(#fff, #fff), url(./squiggle.svg);
+	mask-repeat: no-repeat, repeat no-repeat;
+	mask-size: 100% 100%, auto 1.5em;
+	mask-position: 0, -1px -1px;
+	mask-composite: substract;
 }
