--- a/src/css/css.css
+++ b/src/css/css.css
@@ -1,103 +1,226 @@
-:root {
-	--darker: #fff;
-	--dark: #2e3947;
-	--light: #ff0051;
-	--lighter: rgba(255, 255, 255, 0.5);
-	--pink: #ff0051;
-}
+@import url("https://fonts.googleapis.com/css?family=Rubik:400,500,700&display=swap");
 
 :root {
-	-webkit-font-smoothing: antialiased;
+  --pink: #c7f464;
+  --bg: #556270;
+  --bg-dark: #0c1824;
+  --fg: #fff;
+  --fg-light: rgba(255, 255, 255, 0.5);
+  background-color: var(--bg);
+  background: linear-gradient(to bottom right, var(--bg-dark), var(--bg));
+  -webkit-font-smoothing: antialiased;
 }
-
 @media (max-width: 60em) {
-	:root {
-		font-size: 0.8em;
-	}
+  :root {
+    font-size: 0.8em;
+  }
 }
 
 * {
-	font-size: 1em;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	font-weight: normal;
-	color: inherit;
-	text-decoration: none;
-	backface-visibility: hidden;
+  font-size: 1em;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-weight: normal;
+  color: inherit;
+  text-decoration: none;
+  backface-visibility: hidden;
 }
 
 body {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-		'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
-		'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-	line-height: 1.1;
-	letter-spacing: -0.05em;
-	overflow-x: hidden;
-	will-change: scroll-position;
+  font-family: "Rubik", helvetica, arial, sans-serif;
+  line-height: 1.1;
+  letter-spacing: -0.05em;
+  overflow-x: hidden;
+}
+
+x-fg {
+  z-index: 20;
+  position: relative;
+  contain: content;
+  overflow: hidden;
 }
 
 .wrapper {
-	margin: auto;
-	max-width: 40em;
-	padding: 10vmin 2em;
-	will-change: transform;
-	z-index: 20;
-	position: relative;
-}
-:root[data-is-phone='true'] .wrapper {
-	padding-top: 25vh;
+  margin: auto;
+  max-width: 42em;
+  padding: 10vmin 2em;
+  will-change: transform;
+  z-index: 20;
+  position: relative;
 }
 
 .chip {
-	background: var(--pink);
-	color: var(--bg-dark);
-	padding: 0.5em 0.75em;
-	font-weight: 400;
-	display: inline-flex;
-	text-transform: uppercase;
-	font-size: 0.75rem;
-	border-radius: 2px;
-	letter-spacing: 0.1em;
+  background: var(--pink);
+  color: var(--bg-dark);
+  padding: 0.5em 0.75em;
+  display: inline-flex;
+  text-transform: uppercase;
+  font-size: 1em;
+  border-radius: 2px;
+  letter-spacing: 1px;
 }
 
 .intro {
-	font-size: 2em;
-	margin: 5vmin 0;
+  color: var(--fg);
+  font-size: 2em;
+  margin: 5vmin 0;
 }
 
 @media (min-width: 60em) {
-	.intro {
-		font-size: 2.5em;
-	}
+  .intro {
+    font-size: 3em;
+  }
+}
+
+footer {
+  color: var(--fg);
+  font-size: 1.5em;
+  font-weight: 400;
+  margin: 10vmin 0 0;
+  width: 85%;
+}
+
+footer strong {
+  font-weight: 700;
+}
+
+footer section {
+  font-size: 1rem;
+  margin-top: 10vmin;
+  display: block;
+  width: 100%;
+}
+
+footer li {
+  display: inline-block;
+}
+
+footer li:not(:last-child):after {
+  content: "·";
+  padding: 0 0.25em;
+}
+
+footer a {
+  text-decoration: underline;
+  text-decoration-style: wavy;
+  text-decoration-color: var(--fg-light);
+}
+
+footer > a,
+footer a:hover,
+footer a:focus {
+  color: var(--pink);
+  text-decoration-color: var(--pink);
 }
 
 .intro strong,
 .intro em {
-	cursor: help;
+  color: var(--pink);
+  cursor: help;
 }
 
 .intro strong {
-	font-weight: 900;
+  font-weight: 500;
 }
 
 .intro em {
-	font-style: normal;
-}
-
-.intro .subintro {
-	color: #999;
-}
-
-.intro h1 {
-	margin-bottom: 1em;
+  font-style: normal;
 }
 
 .intro s {
-	white-space: nowrap;
-	text-decoration: line-through;
-	text-decoration-style: wavy;
-	text-decoration-color: rgba(0, 0, 0, 0.5);
-	opacity: 0.5;
-	cursor: help;
+  opacity: 0.5;
+  white-space: nowrap;
+  text-decoration: line-through;
+  text-decoration-style: wavy;
+  color: var(--pink);
+  cursor: help;
+}
+
+.links a {
+  padding: 0.5em 0.75em;
+  display: inline-flex;
+  border-radius: 2px;
+  background: var(--fg);
+  flex-direction: column;
+  margin: 1vmin 0;
+  transition: 0.25s;
+  color: var(--bg);
+  box-shadow: inset -4px 0 0 0 var(--pink);
+  will-change: transform;
+}
+
+.links a span {
+  text-transform: uppercase;
+  font-size: 1em;
+  letter-spacing: 0.5px;
+  font-weight: 400;
+}
+
+.links a strong {
+  font-size: 3em;
+  font-weight: 700;
+  line-height: 0.9;
+  margin-left: -0.05em;
+  color: var(--bg-dark);
+}
+
+.links a strong:after {
+  content: "➜";
+  font-size: 0.8em;
+  margin-left: 1em;
+}
+
+.links a:hover,
+.links a:focus {
+  box-shadow: inset -100vw 0 0 0 var(--pink);
+  transform: scale(1.05);
+}
+
+.links a:hover strong:after,
+.links a:focus strong:after {
+  transform: translateX(200px);
+}
+
+x-bg {
+  z-index: 9;
+  opacity: 0.2;
+}
+
+x-underbg {
+  z-index: 8;
+  background: linear-gradient(to bottom right, var(--bg-dark), var(--bg));
+}
+
+x-glitch {
+  z-index: 10;
+  mix-blend-mode: multiply;
+  background: url(gli.gif);
+  background-size: cover;
+  z-index: 9;
+  opacity: 0.15;
+}
+
+x-tomfoolery,
+x-tomfoolery > * {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  will-change: transform;
+  contain: strict;
+  pointer-events: none;
+}
+x-tomfoolery {
+  perspective: 10000px;
+  position: fixed;
+}
+x-tomfoolery canvas {
+  width: 100%;
+}
+
+x-stickers {
+  display: none;
+  position: absolute;
 }
