--- a/src/css/css.css
+++ b/src/css/css.css
@@ -1,20 +1,16 @@
 :root {
-  --color-accent: #ffde21;
-  --bg: #20205e;
-  --bg-dark: #20205e;
-  --fg: #fff;
-  --fg-light: rgba(255, 255, 255, 0.5);
+  --bg: #020417;
   --basis: 3rem;
+  --color-accent: #FF3573;
   --color-text-rgb: 255, 255, 255;
   --color-text-on-contrast-rgb: 0, 0, 0;
   --color-text: rgb(var(--color-text-rgb));
-  --color-border: white;
+  --color-border: rgba(255, 255, 255, 0.6);
   --color-contrast: white;
   --color-text-on-contrast: rgb(var(--color-text-on-contrast-rgb));
 
   background-color: var(--bg);
-  background: linear-gradient(to bottom right, var(--bg-dark), var(--bg));
-  -webkit-font-smoothing: antialiased;
+  color: var(--color-text);
 }
 
 * {
@@ -22,7 +18,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  font-weight: normal;
+  font-weight: 300;
   color: inherit;
   text-decoration: none;
   backface-visibility: hidden;
@@ -63,10 +59,113 @@ x-fg {
 }
 
 .intro {
-  color: var(--fg);
-  font-size: 1.4rem;
-  margin: calc(var(--basis) * 2) var(--basis);
+  font-size: 1.6rem;
+  margin: calc(var(--basis) * 1.5) var(--basis);
+
+  img {
+    height: .8em;
+    margin-right: .1em;
+  }
+
+  & .intro-para {
+    margin-bottom: calc(var(--basis) * 0.5);
+    + .intro-para {
+      margin-bottom: 0;
+    }
+  }
+
+  h1 {
+    display: inline;
+    strong {
+      color: var(--color-accent);
+    }
+  }
+
+  strong,
+  s,
+  em {
+    cursor: help;
+    font-style: normal;
+    font-weight: 600;
+  }
+  s {
+    opacity: 0.5;
+    text-decoration: line-through;
+    cursor: help;
+  }
 }
+
+.links {
+  overflow: scroll;
+  border: 1px solid var(--color-border);
+  border-left: 0;
+  border-right: 0;
+  ul {
+    display: flex;
+    flex-direction: column;
+    @media (orientation: landscape) {
+      flex-direction: row;
+      height: 100%;
+    }
+    li {
+      display: contents;
+    }
+    & li + li a {
+      @media (orientation: portrait) {
+        border-top: 1px solid var(--color-border);
+      }
+      @media (orientation: landscape) {
+        border-left: 1px solid var(--color-border);
+      }
+    }
+  }
+
+  a {
+    padding: var(--basis);
+    display: flex;
+    justify-content: space-between;
+    box-shadow: inset 0 0 0 0 transparent;
+    flex-direction: column;
+    transition: 0.5s;
+    contain: content;
+    flex: 0 0 auto;
+    @media (orientation: landscape) {
+      width: 11rem;
+    }
+
+    &:hover,
+    &:focus {
+      @media (orientation: landscape) {
+        box-shadow: inset 0 100vh 0 0 var(--color-accent);
+      }
+      @media (orientation: portrait) {
+        box-shadow: inset 100vw 0 0 0 var(--color-accent);
+      }
+      color: var(--color-text-on-contrast);
+      filter: blur(0.5px);
+    }
+  }
+  span {
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    letter-spacing: 0.2em;
+    font-weight: 200;
+    opacity: 0.5;
+  }
+  
+  strong {
+    font-weight: 800;
+    transform-origin: 0 0;
+    font-size: 8vw;
+    @media (orientation: landscape) {
+      line-height: 1cap;
+      transform: translateY(100%) rotate(-90deg);
+      font-size: 8vh;
+      height: 10em;
+    }
+  }
+}
+
 
 footer {
   color: var(--color-text-on-contrast);
@@ -77,149 +176,47 @@ footer {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-}
 
-footer strong {
-  font-weight: 700;
-}
+  strong {
+    font-weight: 700;
+  }
 
-footer li {
-  display: inline-block;
-}
+  li {
+    display: inline-block;
+    &:not(:last-child):after {
+      content: "·";
+      padding: 0 0.25em;
+    }
+  }
 
-footer li:not(:last-child):after {
-  content: "·";
-  padding: 0 0.25em;
-}
-
-footer a {
-  text-decoration: underline;
-  text-decoration-style: wavy;
-  font-weight: 800;
-  text-decoration-color: rgb(var(--color-text-on-contrast-rgb), 0.5);
-}
-
-footer > a,
-footer a:hover,
-footer a:focus {
-  text-decoration-color: var(--color-text-on-contrast);
-}
-
-.intro h1 {
-  display: inline;
-}
-
-.intro strong,
-.intro em {
-  color: var(--color-accent);
-  cursor: help;
-}
-
-.intro em {
-  font-style: normal;
-}
-
-.intro s {
-  opacity: 0.5;
-  white-space: nowrap;
-  text-decoration: line-through;
-  text-decoration-style: wavy;
-  color: var(--color-accent);
-  cursor: help;
-}
-
-.links {
-  overflow: scroll;
-  border: 1px solid var(--color-border);
-  border-left: 0;
-  border-right: 0;
-}
-
-.links ul {
-  display: flex;
-  flex-direction: column;
-  @media (orientation: landscape) {
-    flex-direction: row;
-    height: 100%;
+  a {
+    text-decoration: underline;
+    font-weight: 800;
+    text-decoration-color: rgb(var(--color-text-on-contrast-rgb), 0.5);
+    &:hover,
+    &:focus {
+      color: var(--color-accent);
+      text-decoration-color: inherit;
+    }
   }
 }
 
-.links li {
-  display: contents;
-}
-
-.links a {
-  padding: var(--basis);
-  display: flex;
-  justify-content: space-between;
-  box-shadow: inset 0 0 0 0 transparent;
-  flex-direction: column;
-  transition: 0.5s;
-  contain: content;
-  flex: 0 0 auto;
-  @media (orientation: landscape) {
-    width: 12rem;
-  }
-}
-
-.links a:hover,
-.links a:focus {
-  @media (orientation: landscape) {
-    box-shadow: inset 0 100vh 0 0 var(--color-accent);
-  }
-  @media (orientation: portrait) {
-    box-shadow: inset 100vw 0 0 0 var(--color-accent);
-  }
-  color: var(--color-text-on-contrast);
-  filter: blur(0.5px);
-}
-
-.links ul li + li a {
-  @media (orientation: portrait) {
-    border-top: 1px solid var(--color-border);
-  }
-  @media (orientation: landscape) {
-    border-left: 1px solid var(--color-border);
-  }
-}
-
-.links a span {
-  text-transform: uppercase;
-  font-size: 0.8rem;
-  letter-spacing: 0.2em;
-  font-weight: 200;
-  opacity: 0.5;
-}
-
-.links a strong {
-  font-weight: 800;
-  transform-origin: 0 0;
-  font-size: 8vw;
-  @media (orientation: landscape) {
-    line-height: 1cap;
-    transform: translateY(100%) rotate(-90deg);
-    font-size: 8vh;
-    height: 10em;
-  }
-}
+/*
+ * Backgrounds
+ */
 
 x-bg {
-  z-index: 9;
-  opacity: 0.2;
-}
-
-x-underbg {
   z-index: 8;
-  background: linear-gradient(to bottom right, var(--bg-dark), var(--bg));
+  background: url(gli.jpg);
+  background-size: cover;
 }
 
 x-glitch {
-  z-index: 10;
-  mix-blend-mode: multiply;
+  mix-blend-mode: lighten;
   background: url(gli.gif);
   background-size: cover;
   z-index: 9;
-  opacity: 0.15;
+  opacity: .7;
 }
 
 x-tomfoolery,
@@ -232,16 +229,4 @@ x-tomfoolery > * {
   will-change: transform;
   contain: strict;
   pointer-events: none;
-}
-x-tomfoolery {
-  perspective: 10000px;
-  position: fixed;
-}
-x-tomfoolery canvas {
-  width: 100%;
-}
-
-x-stickers {
-  display: none;
-  position: absolute;
 }
