--- a/src/css/css.css
+++ b/src/css/css.css
@@ -46,15 +46,17 @@ x-fg {
   width: 100%;
   display: flex;
   flex-direction: column;
+
   @media (orientation: landscape) {
     height: 100vh;
   }
 }
 
-.wrapper > .links {
+.wrapper>.links {
   @media (orientation: landscape) {
     flex: 1 1 0;
   }
+
   color: var(--color-text);
 }
 
@@ -69,13 +71,15 @@ x-fg {
 
   & .intro-para {
     margin-bottom: calc(var(--basis) * 0.5);
-    + .intro-para {
+
+    +.intro-para {
       margin-bottom: 0;
     }
   }
 
   h1 {
     display: inline;
+
     strong {
       color: var(--color-accent);
     }
@@ -88,6 +92,7 @@ x-fg {
     font-style: normal;
     font-weight: 600;
   }
+
   s {
     opacity: 0.5;
     text-decoration: line-through;
@@ -100,20 +105,25 @@ x-fg {
   border: 1px solid var(--color-border);
   border-left: 0;
   border-right: 0;
+
   ul {
     display: flex;
     flex-direction: column;
+
     @media (orientation: landscape) {
       flex-direction: row;
       height: 100%;
     }
+
     li {
       display: contents;
     }
-    & li + li a {
+
+    & li+li a {
       @media (orientation: portrait) {
         border-top: 1px solid var(--color-border);
       }
+
       @media (orientation: landscape) {
         border-left: 1px solid var(--color-border);
       }
@@ -126,25 +136,30 @@ x-fg {
     justify-content: space-between;
     box-shadow: inset 0 0 0 0 transparent;
     flex-direction: column;
-    transition: 0.5s;
     contain: content;
     flex: 0 0 auto;
+
     @media (orientation: landscape) {
       width: 11rem;
     }
 
     &:hover,
     &:focus {
+      transition: 0.5s;
+
       @media (orientation: landscape) {
         box-shadow: inset 0 100vh 0 0 var(--color-accent);
       }
+
       @media (orientation: portrait) {
         box-shadow: inset 100vw 0 0 0 var(--color-accent);
       }
+
       color: var(--color-text-on-contrast);
       filter: blur(0.5px);
     }
   }
+
   span {
     text-transform: uppercase;
     font-size: 0.8rem;
@@ -152,11 +167,12 @@ x-fg {
     font-weight: 200;
     opacity: 0.5;
   }
-  
+
   strong {
     font-weight: 800;
     transform-origin: 0 0;
     font-size: 8vw;
+
     @media (orientation: landscape) {
       line-height: 1cap;
       transform: translateY(100%) rotate(-90deg);
@@ -171,11 +187,16 @@ footer {
   color: var(--color-text-on-contrast);
   font-size: 0.8rem;
   font-weight: 400;
-  padding: calc(var(--basis) / 4) var(--basis);
+  padding: calc(var(--basis) / 3) var(--basis);
   background-color: var(--color-contrast);
   display: flex;
   justify-content: space-between;
   flex-direction: row;
+
+  @media (orientation: portrait) {
+    flex-direction: column;
+    gap: calc(var(--basis) / 3);
+  }
 
   strong {
     font-weight: 700;
@@ -183,6 +204,7 @@ footer {
 
   li {
     display: inline-block;
+
     &:not(:last-child):after {
       content: "·";
       padding: 0 0.25em;
@@ -193,6 +215,7 @@ footer {
     text-decoration: underline;
     font-weight: 800;
     text-decoration-color: rgb(var(--color-text-on-contrast-rgb), 0.5);
+
     &:hover,
     &:focus {
       color: var(--color-accent);
@@ -220,7 +243,7 @@ x-glitch {
 }
 
 x-tomfoolery,
-x-tomfoolery > * {
+x-tomfoolery>* {
   top: 0;
   left: 0;
   right: 0;
